--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,41 @@
 <resources>
     <string name="app_name">Android mock location</string>
+    <string name="action_settings">Settings</string>
+    <string name="manage_mock_testing_banner">Manage mock location testing</string>
+    <string name="one_run_button_text">Run once</string>
+    <string name="location_test_finish">Test run finished</string>
+    <string name="app_status_label">App status:</string>
+    <string name="connection_status_label">Connection status:</string>
+    <string name="unknown_string_value">--unknown--</string>
+    <string name="testing_started">Location testing started</string>
+    <!-- Latitude, longitude format -->
+    <string name="latlng">%1$.8f, %2$.8f</string>
+    <string name="disconnected">Client disconnected</string>
+    <string name="connected">Client connected</string>
+    <string name="connection_failure">Client connection failed, error code %1$d</string>
+    <string name="run_continuous_button_text">Run continuously</string>
+    <string name="label_latlng">Lat/Long:</string>
+    <string name="label_elapsed_time">Elapsed time:</string>
+    <string name="label_clock_time">Clock time:</string>
+    <string name="label_accuracy">Accuracy:</string>
+    <string name="elapsed_time">%1$,d seconds since boot</string>
+    <string name="clock_time">yyyy_MM_dd kk:mm UTCZ</string>
+    <string name="accuracy">%1$.2f</string>
+    <string name="stop_test_button_text">Stop test</string>
+    <string name="pause_entry_label">Pause before test (secs): </string>
+    <string name="send_entry_label">Send interval (secs):</string>
+    <string name="pause_interval_empty">No value supplied for pause interval</string>
+    <string name="pause_interval_not_positive">Pause interval must be greater than 0</string>
+    <string name="send_entry_empty">No value supplied for send interval</string>
+    <string name="send_interval_not_positive">Send interval must be greater than 0</string>
+    <string name="not_continuous_test">Stop test invalid; not in continuous test</string>
+    <string name="notification_title_test_start">Mock Location Testing</string>
+    <string name="notification_content_test_start">Starting test</string>
+    <string name="notification_content_test_running">Test running</string>
+    <string name="notification_content_test_stop">Test stopped</string>
+    <string name="invalid_broadcast_code">Received invalid broadcast code.</string>
+    <string name="test_interrupted">Continuous testing interrupted by user.</string>
+    <string name="no_service">The test service is not running</string>
+    <string name="stop_service">Sent request to stop testing</string>
+
 </resources>
